--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <p>There is a high rate of anaemia and rampant need for blood for blood transfusion by patients and medical officers and they get a hard time locating compatible blood donors.
 This is due to inconveniences at medical centres which include, long queues and time delays in requisition for blood by recipients, procrastination in blood delivery and scarcity and a delay in getting blood within a specified period of time.
 </p>
-				 <a class="download" href="#">DOWNLOAD NOW</a>
+				 <a class="download" href="https://www.mediafire.com/file/c8k4rv7s3binye7/app-release.apk/file">DOWNLOAD NOW</a>
 				 <a class="view hvr-bounce-to-left" href="#features">VIEW FEATURES</a>
 			 </div>
 			 <div class="col-md-6 banner-pic wow fadeInLeft" data-wow-delay="0.5s">
